--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "config": "^1.20.1",
     "express": "^4.16.4",
     "mongoose": "^4.4.15",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "pg": "^7.6.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
