Added DB migration modules

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "config": "^1.20.1",
+    "db-migrate": "^0.11.4",
+    "db-migrate-pg": "^0.4.0",
     "express": "^4.16.4",
     "mongoose": "^4.4.15",
     "morgan": "^1.7.0",
@@ -21,6 +23,7 @@
   "scripts": {
     "start": "SET NODE_ENV=dev && node server.js",
     "test": "mocha --timeout 10000",
-    "testwatch": "mocha --timeout 10000 --watch ./test ./"
+    "testwatch": "mocha --timeout 10000 --watch ./test ./",
+    "db-migrate-check": "db-migrate check"
   }
 }
