--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "db-migrate": "^0.11.4",
     "db-migrate-pg": "^0.4.0",
     "express": "^4.16.4",
+    "growl": ">=1.10.0",
+    "mime": ">=1.4.1",
     "mongoose": "^4.4.15",
     "morgan": "^1.7.0",
     "pg": "^7.6.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "chai-http": "^2.0.1",
-    "mocha": "^2.5.3"
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0"
   },
   "scripts": {
     "start": "SET NODE_ENV=dev && node server.js",
